<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sandrowinkler.example_apps.splashscreen.MainActivity"
    android:background="@color/activity_main_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_text"
        android:layout_centerInParent="true"
        android:id="@+id/activity_main_text"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/activity_main_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cool"
        android:layout_above="@id/activity_main_text"
        android:layout_centerHorizontal="true"
        android:id="@+id/activity_main_icon"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_again"
        android:layout_below="@id/activity_main_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/activity_main_text"
        android:id="@+id/activity_main_button_splash_again"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_edittexts"
        android:layout_below="@id/activity_main_button_splash_again"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/activity_main_text"
                android:gravity="center"
                android:text="@string/activity_main_text_steps"/>

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:inputType="number"
                android:textColor="@color/activity_main_text"
                android:layout_marginLeft="16dp"
                android:id="@+id/activity_main_edittext_steps" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/activity_main_text"
                android:text="@string/activity_main_text_seconds" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:inputType="numberDecimal"
                android:layout_marginStart="16dp"
                android:textColor="@color/activity_main_text"
                android:layout_marginLeft="16dp"
                android:id="@+id/activity_main_edittext_seconds" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icons8"
        android:textColor="@color/activity_main_text_light"
        android:textSize="@dimen/text_size_small"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
